PartnerDemo/src/objects/Account_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Settings</relationshipLabel>
        <relationshipName>Account_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <picklist>
            <picklistValues>
                <fullName>JBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harman Kardon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Products</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Home Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sounds Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subwoofers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category_Limit__c</fullName>
        <label>Category Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copyright_Text__c</fullName>
        <label>Copyright Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Links__c</fullName>
        <label>Footer Links</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Items_Per_Page__c</fullName>
        <defaultValue>5</defaultValue>
        <label>No of Items Per Page</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Account Settings</relationshipLabel>
        <relationshipName>Account_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Media__c</fullName>
        <label>Social Media</label>
        <picklist>
            <picklistValues>
                <fullName>facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>linkedin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dribbble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>google-plus</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Email__c</fullName>
        <label>Top Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Phone__c</fullName>
        <label>Top Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Icon_Options__c</fullName>
        <label>User Icon Options</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Theme__c</columns>
        <columns>Price_Book__c</columns>
        <columns>is_Active__c</columns>
        <columns>No_of_Items_Per_Page__c</columns>
        <columns>Image_URL__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Account Setting Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>